--- a/index.html
+++ b/index.html
@@ -1,112 +1,32 @@
-<!DOCTYPE html>
-<html lang="fa">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بازی سوالات</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
-        body {
-            font-family: 'Vazirmatn', sans-serif;
-            background: linear-gradient(135deg, #ffafbd, #ffc3a0);
-            height: 100vh;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            color: #444;
-        }
-        .container {
-            background-color: white;
-            padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            width: 100%;
-        }
-        h1 {
-            color: #ff6f61;
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-        #question {
-            font-size: 18px;
-            margin-bottom: 15px;
-            color: #555;
-        }
-        input {
-            width: 100%;
-            padding: 10px;
-            border: 2px solid #ff6f61;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            font-size: 16px;
-            color: #444;
-            outline: none;
-            transition: border-color 0.3s;
-        }
-        input:focus {
-            border-color: #ff3d47;
-        }
-        button {
-            background-color: #ff6f61;
-            color: white;
-            border: none;
-            padding: 12px 20px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #ff3d47;
-        }
-        button:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-        #answer.hidden, button.hidden {
-            display: none;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>به سوالات زیر پاسخ بده</h1>
-        <div id="question">در حال بارگذاری...</div>
-        <input type="text" id="answer" placeholder="جوابت رو اینجا بنویس">
-        <button onclick="nextQuestion()">بعدی</button>
-    </div>
+document.getElementById("question").innerText = "حالا اشکال نداره که مطمئن نیستی.";
+                    setTimeout(() => {
+                        currentQuestion++; // ادامه به سوال بعدی بعد از چند ثانیه
+                        document.getElementById("question").innerText = questions[currentQuestion];
+                        document.getElementById("answer").value = "";
+                    }, 2000); // تاخیر 2 ثانیه برای نمایش پیام
+                    return;
+                }
+            }
 
-    <script>
-        const questions = [
-            "اسمت چیه؟",
-            "دروغ که نمیگی؟",
-            "کجا دوست داری بری؟",
-            "مطمئنی؟",
-            "چه ساعتی؟"
-        ];
-
-        let currentQuestion = 0;
-        const answers = {};
-
-        function nextQuestion() {
-            const answer = document.getElementById("answer").value;
-            if (answer.trim() === "") return;
-
-            if (currentQuestion === 0) answers.name = answer;
-            if (currentQuestion === 1) answers.lie = answer;
-            if (currentQuestion === 2) answers.place = answer;
-            if (currentQuestion === 3) answers.sure = answer;
             if (currentQuestion === 4) answers.time = answer;
 
-            document.getElementById("answer").value = "";
-            if (currentQuestion < questions.length - 1) {
+            document.getElementById("answer").value = ""; // پاک کردن جواب
+            currentQuestion++; // افزایش شمارنده سوال
+
+            // نمایش سوال بعدی یا پایان سوالات
+            if (currentQuestion < questions.length) {
                 document.getElementById("question").innerText = questions[currentQuestion];
-                currentQuestion++;
+
+                // برای سوالات "مطمئنی" و "دروغ که نمیگی"، ورودی غیرفعال می‌شود
+                if (currentQuestion === 1 || currentQuestion === 3) {
+                    document.getElementById("answer").disabled = true;
+                    document.getElementById("answer").placeholder = "نیازی به ورودی نیست";
+                } else {
+                    document.getElementById("answer").disabled = false;
+                    document.getElementById("answer").placeholder = "جوابت رو اینجا بنویس";
+                }
             } else {
-                sendAnswers();
+                sendAnswers(); // ارسال جواب‌ها
             }
         }
 
@@ -125,6 +45,7 @@
               });
         }
 
+        // نمایش اولین سوال
         document.getElementById("question").innerText = questions[currentQuestion];
     </script>
 </body>
