--- a/index.html
+++ b/index.html
@@ -1,3 +1,117 @@
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>بازی سوالات</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
+        body {
+            font-family: 'Vazirmatn', sans-serif;
+            background: linear-gradient(135deg, #2c2c2c, #4d4d4d); /* تیره کردن پس‌زمینه */
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            color: #e0e0e0; /* متن خاکستری روشن */
+        }
+        .container {
+            background-color: #1c1c1c; /* پس‌زمینه تیره جعبه */
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            width: 100%;
+        }
+        h1 {
+            color: #e0e0e0; /* تیره کردن عنوان */
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+        #question {
+            font-size: 18px;
+            margin-bottom: 15px;
+            color: #cccccc; /* متن سوال خاکستری */
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            border: 2px solid #555555; /* حاشیه خاکستری تیره */
+            border-radius: 8px;
+            margin-bottom: 20px;
+            font-size: 16px;
+            color: #e0e0e0; /* متن ورودی تیره */
+            background-color: #333333; /* پس‌زمینه ورودی تیره */
+            outline: none;
+            transition: border-color 0.3s;
+        }
+        input:focus {
+            border-color: #777777; /* تغییر رنگ حاشیه ورودی هنگام فوکوس */
+        }
+        button {
+            background-color: #555555; /* دکمه تیره */
+            color: white;
+            border: none;
+            padding: 12px 20px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #777777; /* تغییر رنگ دکمه هنگام هاور */
+        }
+        button:disabled {
+            background-color: #333333; /* دکمه غیرفعال تیره‌تر */
+            cursor: not-allowed;
+        }
+        #answer.hidden, button.hidden {
+            display: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>به سوالات زیر پاسخ بده</h1>
+        <div id="question">در حال بارگذاری...</div>
+        <input type="text" id="answer" placeholder="جوابت رو اینجا بنویس">
+        <button onclick="nextQuestion()">بعدی</button>
+    </div>
+
+    <script>
+        const questions = [
+            "اسمت چیه؟",
+            "دروغ که نمیگی؟",
+            "کجا دوست داری بری؟",
+            "مطمئنی؟", // سوال مطمئنی؟
+            "چه ساعتی؟"
+        ];
+
+        let currentQuestion = 0;
+        const answers = {};
+
+        function nextQuestion() {
+            const answer = document.getElementById("answer").value;
+
+            // در سوالات "مطمئنی" و "دروغ که نمیگی"، نیازی به ورودی معتبر نیست
+            if (currentQuestion !== 1 && currentQuestion !== 3 && answer.trim() === "") return;
+
+            // ذخیره جواب‌ها
+            if (currentQuestion === 0) {
+                answers.name = answer;
+                // بررسی نام‌های خاص
+                if (answer === "فرشته" || answer.toLowerCase() === "freshte") {
+                    alert("اسم قشنگی داری.");
+                }
+            }
+            if (currentQuestion === 1) answers.lie = answer;
+            if (currentQuestion === 2) answers.place = answer;
+
+            if (currentQuestion === 3) {
+                answers.sure = answer;
+                if (answer.toLowerCase() === "نه" || answer.toLowerCase() === "na") {
 document.getElementById("question").innerText = "حالا اشکال نداره که مطمئن نیستی.";
                     setTimeout(() => {
                         currentQuestion++; // ادامه به سوال بعدی بعد از چند ثانیه
